[package]
authors = ["Praveen Perera <praveen@avencera.com>"]
edition = "2018"
name = "strs"
version = "0.1.0"

[[bench]]
harness = false
name = "all"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"

criterion = {version = "0.3", features = ["html_reports"]}
